--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,22 +1,23 @@
 name: DropChest
-version: 0.8.3
-author: narrowtux
+version: ${project.version}
+authors: [narrowtux, shaybox]
 description: Absorbs dropped loot into Chests. Useful for automatic farming or gathering loot from mob traps.
+api-version: 1.14
 
 main: com.narrowtux.dropchest.DropChest
 
 commands:
-    dropchest:
-        aliases: dc
-        description: Access to all DropChest commands.
-    dcitem:
-        aliases: dci
-        description: Gives you the name or the ID of the passed item.
-        usage: /<command> <name|id>
-    chestinfo:
-        aliases: chi
-        description: Gives you information about a chest's contents. Omit the argument and rightclick on a non-dropchest
-        usage: /<command> <name|id>
+  dropchest:
+    aliases: dc
+    description: Access to all DropChest commands.
+  dcitem:
+    aliases: dci
+    description: Gives you the name or the ID of the passed item.
+    usage: /<command> <name|id>
+  chestinfo:
+    aliases: chi
+    description: Gives you information about a chest's contents. Omit the argument and rightclick on a non-dropchest
+    usage: /<command> <name|id>
 
 permissions:
   dropchest:
@@ -36,8 +37,6 @@ permissions:
     default: op
   dropchest.filter:
     default: true
-  dropchest.filter:
-    default: true
   dropchest.filter.set:
     default: true
   dropchest.filter.reset:
@@ -53,15 +52,15 @@ permissions:
   dropchest.*:
     description: Access to all DropChest commands.
     children:
-        dropchest.create: true
-        dropchest.destroy: true
-        dropchest.remove: true
-        dropchest.list: true
-        dropchest.which: true
-        dropchest.teleport: true
-        dropchest.radius.set: true
-        dropchest.radius.setBig: true
-        dropchest.filter.set: true
-        dropchest.filter.reset: true
-        dropchest.moderator: true
-        dropchest: true
+      dropchest.create: true
+      dropchest.destroy: true
+      dropchest.remove: true
+      dropchest.list: true
+      dropchest.which: true
+      dropchest.teleport: true
+      dropchest.radius.set: true
+      dropchest.radius.setBig: true
+      dropchest.filter.set: true
+      dropchest.filter.reset: true
+      dropchest.moderator: true
+      dropchest: true
